# solx

./: .env.example  .gitignore  README.md  eslint.config.mjs  heroku-build.sh  nx.json  package.json  tsconfig.base.json
apps/api/: webpack.config.js
apps/api/src/: main.ts
apps/api/src/app/: app.module.ts
apps/contracts/: Anchor.toml  README.md  jest.config.ts  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
apps/contracts/migrations/: deploy.ts
apps/contracts/programs/solx/: Cargo.toml
apps/contracts/programs/solx/src/: constants.rs  decimal_correction.rs  error.rs  event.rs  lib.rs  utils.rs
apps/contracts/programs/solx/src/instructions/: close_listing.rs  create_listing.rs  initialize.rs  initiate_dispute.rs  mod.rs  purchase.rs  resolve_dispute.rs  update_mint.rs  whitelist.rs
apps/contracts/programs/solx/src/state/: dispute_state.rs  global_state.rs  listing_state.rs  mod.rs  payment_mint_state.rs  whitelisted_state.rs
apps/contracts/tests/: contracts.ts
apps/indexer/: Procfile  project.json  webpack.config.js
apps/indexer/src/: app.module.ts  main.ts
apps/web/: .env.example  index.html  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  mocks.ts  styles.css
libs/data-access/: project.json
libs/data-access/prisma/: tsconfig.json
libs/data-access/src/: data-access.module.ts  index.ts
libs/queues/src/: analyze-file.queue.ts  index.ts  indexer.queue.ts
workspace-data/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json
(+189 files in other folders)
