[package]
name = "solx"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solx"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = ">=1.16, <1.18"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = {version = "0.29.0", features = ["metadata"]}
mpl-token-metadata = { version = "3.2.3" }
pyth-solana-receiver-sdk = "0.3.2"
spl-token = "=4.0.0"
spl-memo = "=4.0.0"